# sapphire-team-back

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  prometheus.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: autotests-stage.yaml  cleanup.yaml  deploy-production.yaml  deploy-stage.yaml  integration.yaml  main.yaml
autotests/: conftest.py  settings.py
autotests/clients/: email.py  websocket.py
autotests/clients/rest/: base_client.py  exceptions.py  models.py
autotests/clients/websocket/: base_client.py
autotests/flow/: test_messenger.py  test_projects.py  test_users.py
autotests/rest/: client.py  conftest.py
autotests/rest/messenger/: conftest.py  test_chats.py  test_health.py
autotests/rest/notifications/: conftest.py  test_health.py  test_notifications.py
autotests/rest/projects/: conftest.py  test_health.py  test_participants.py  test_positions.py  test_projects.py  test_reviews.py  test_users.py
autotests/rest/storage/: conftest.py  test_health.py  test_skills.py  test_specialization_groups.py  test_specializations.py
autotests/rest/users/: conftest.py  test_auth.py  test_health.py  test_users.py
collabry/: cli.py
collabry/common/api/: openapi.py  service.py  settings.py
collabry/common/broker/: handler.py  service.py
collabry/common/cache/: service.py  settings.py
collabry/common/database/: cli.py  settings.py
collabry/common/habr/: __init__.py  client.py  settings.py
collabry/common/habr_career/: __init__.py  client.py
collabry/common/jwt/: __init__.py  settings.py
collabry/common/oauth2/: service.py
collabry/common/socketio/: service.py  settings.py
collabry/common/utils/: rsa256.py  settings.py
collabry/database/: cli.py  service.py  settings.py
collabry/database/fixtures/: autotests.yaml
collabry/database/migrations/: env.py
collabry/database/models/: __init__.py  projects.py  users.py
collabry/email/: cli.py
collabry/email/broker/: handlers.py  service.py  settings.py
collabry/email/sender/: settings.py
collabry/messenger/: cli.py  service.py
collabry/messenger/api/: health.py  service.py  settings.py
collabry/messenger/broker/: handler.py  service.py  settings.py
collabry/messenger/database/: cli.py  service.py  settings.py
collabry/notifications/: cli.py  service.py
collabry/notifications/api/: health.py  service.py
collabry/notifications/broker/: handler.py  service.py  settings.py
collabry/notifications/database/: service.py  settings.py
collabry/projects/: cli.py  service.py  settings.py
collabry/projects/api/: health.py  service.py  settings.py
collabry/projects/broker/: service.py
collabry/projects/database/: service.py  settings.py
collabry/storage/: cli.py  service.py  settings.py
collabry/storage/api/: __init__.py  health.py  service.py
collabry/storage/database/: service.py  settings.py
collabry/users/: cli.py  service.py  settings.py
collabry/users/api/: health.py  service.py  settings.py
collabry/users/broker/: service.py  settings.py
sapphire/: __main__.py  cli.py  service.py  settings.py
sapphire/common/: functools.py  http_client.py  package.py  types.py
sapphire/database/: alembic.ini  cli.py  service.py  settings.py
sapphire/email/: README.md  cli.py  service.py  settings.py
sapphire/messenger/: README.md  __main__.py  cli.py  service.py  settings.py
sapphire/notifications/: README.md  cli.py  service.py  settings.py
sapphire/projects/: README.md  __main__.py  cli.py  service.py  settings.py
sapphire/storage/: README.md  cli.py  service.py  settings.py
sapphire/users/: README.md  __init__.py  cli.py  service.py  settings.py
sapphire/utils/: uvicorn_server.py
tests/: conftest.py
tests/common/: test_package.py
tests/jwt/: conftest.py
tests/projects/: conftest.py
tests/storage/: conftest.py
tests/users/: conftest.py
(+447 files in other folders)
