[tool.poetry]
name = "sapphire"
version = "0.0.0"
description = "Backend for developer collaboration service"
authors = ["Oleg Yurchik <oleg@yurchik.space>"]
readme = "README.md"
include = [
  "sapphire",
]

[tool.poetry.dependencies]
# extras
aiosqlite = { version = "^0.19.0", optional = true }
asyncpg = { version = "^0.28.0", optional = true }

# main
python = "^3.11"
typer = "^0.9.0"
facet = "^0.9.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
aiohttp = "^3.8.5"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
aiokafka = "^0.8.1"
yarl = "^1.9.2"
pydantic = {version = "^2.4.0", extras = ["email"]}
pyjwt = "^2.8.0"
cryptography = "^41.0.4"
loguru = "^0.7.2"
websockets = "^11.0.3"
backoff = "^2.2.1"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
isort = "^5.12.0"
pylint-quotes = "^0.2.3"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
faker = "^19.6.2"
requests = "^2.31.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
