[tool.poetry]
name = "collabry"
version = "1.0.0"
description = "Backend for developer collaboration service"
authors = ["Oleg Yurchik <oleg@yurchik.space>"]
readme = "README.md"
include = [
  "collabry",
]

[tool.poetry.dependencies]
# extras
aiosqlite = { version = "^0.19.0", optional = true }
asyncpg = { version = "^0.29.0", optional = true }

# main
python = "^3.11"
facet = "^0.9.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
aiokafka = "^0.10.0"
yarl = "^1.9.2"
pyjwt = "^2.8.0"
loguru = "^0.7.2"
websockets = "^11.0.3"
backoff = "^2.2.1"
aiosmtplib = "^2.0.2"
pyyaml = "^6.0.1"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.25.0"
typer = {version = "^0.9.0", extras = ["all"]}
redis = ">=4.2.0rc1"
pydantic = {version = "^2.5.1", extras = ["email"]}
py-fast-grpc = "^0.3.4"
cryptography = "^42.0.4"
bcrypt = "^4.1.2"
python-socketio = "^5.11.1"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
faker = "^19.6.2"
freezegun = "^1.2.2"
pytest-dependency = "^0.5.1"
pytest-lazy-fixture = "^0.6.3"
imbox = "^0.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
